# FunBlocks

./: .gitignore  .gitmodules  README.md  build.sh  run.sh
funblocks-base/: funblocks-base.cabal
funblocks-base/src/: .CodeGen.hs.swp  .Main2.hs.swp  CodeGen.hs  Main2.hs  Main2.js_hi  Main2.js_o
funblocks-base/src/Blockly/: Workspace.hs
funblocks-base/src/Main2.jsexe/: all.js  lib.js  out.js  out.stats
funblocks-server/: funblocks-server.cabal
funblocks-server/src/: Main.hs
funblocks-server/src/web/: .index.html.swp  index.html
web/: .codegen.js.swp  .gitignore  .index.html.swp  blocks.html  codegen.js  codeworld-base.txt  codeworld.js  funblocks2.js  index.html  lib.base.js  lib2.js  out.base.js  out2.js  rts2.js  runmain2.js
