name:                funblocks-base

version:             0.1.0.0

synopsis:            A functional block-based programming language for CodeWorld

homepage:            https://github.com/stefan-j/FunBlocks
license:             Apache-2.0
license-file:        LICENSE
author:              Stefan Jacholke
maintainer:          stefanjacholke@gmail.com
build-type:          Simple
cabal-version:       >=1.10

Flag ghcjs
  Description: Tell cabal we are using ghcjs
  Default: True

library
  build-depends:       base >=4.8 && <4.9
  
  hs-source-dirs:      src
  
  default-language:    Haskell2010
  
  if flag(ghcjs)
    build-depends: ghcjs-base,
                   ghcjs-dom,
                   ghcjs-canvas
